# ESP32S3-Table_Robot

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults  接线总表.md
examples/display_ili9488/: README.md  main.c
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/ai_chat/: ai_chat.c  ai_chat.h
main/control/button/: power_button.c  power_button.h
main/control/touch/: touch_chip.c  touch_chip.h
main/display/: README.md  display_app.c  display_app.h  display_ili9488.c  display_ili9488.h  display_oled.c  display_oled.h  make_face.py
main/sensors/: ds3231.c  ds3231.h  i2c_bus.c  i2c_bus.h  ina219.c  ina219.h  max30102.c  max30102.h  sht30.c  sht30.h  tof200.c  tof200.h  tof200f.c  tof200f.h
main/servo/: robot_actions.c  robot_actions.h  robot_motion.c  robot_motion.h
